--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,14 @@
 services:
   - type: web
     name: goatcounter
-    env: docker
-    healthCheckPath: /status
-    autoDeploy: false
+    env: image
+    image:
+      url: docker.io/arp242/goatcounter
     envVars:
-      - key: DB_NAME
-        fromDatabase:
-          name: goatcounter-postgres
-          property: database
-      - key: DB_PASSWORD
-        fromDatabase:
-          name: goatcounter-postgres
-          property: password
-      - key: DB_USER
-        fromDatabase:
-          name: goatcounter-postgres
-          property: user
-      - key: DB_CONNECTION_STRING
+      - key: GOATCOUNTER_DB
         fromDatabase:
           name: goatcounter-postgres
           property: connectionString
-      - key: GC_USER_EMAIL
-        sync: false
-      - key: GC_PASSWORD
-        sync: false
 
 databases:
   - name: goatcounter-postgres
